--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/validator": "^13.7.15",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "validator": "^13.9.0"
   }
 }
